edite index,titulo y agregue una imagen

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Inicio / ejemplo sitio web</title>
+   <title>GIT</title>
     
 </head>
 <body>
-    
+    <h1>EJERCICIO CON GIT</h1>
+    <section>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero ullam explicabo, corrupti soluta modi similique ipsa perspiciatis sit ut ratione, nemo culpa aliquid ad vitae asperiores cum provident recusandae error?</p>
+    </section>
+    <div>
+        <img src="img/cafeenmesa.jpg" alt="cafe">
+    </div>
 </body>
 </html>
